--- a/client/src/Pages/Home/Modal.css
+++ b/client/src/Pages/Home/Modal.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -13,10 +15,10 @@
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 1000;
     color: black;
-    backdrop-filter: blur(4.5px); /* valor ajustável para mais ou menos desfoque */
+    backdrop-filter: blur(7px); /* valor ajustável para mais ou menos desfoque */
 }
 
-#MODAL_id {
+#BLOCO_DISPONÍVEL{
   position: absolute;
   font-family: 'Montserrat', sans-serif;
   display: block;
@@ -64,9 +66,46 @@ font-size: 28px;
 }
 
 #CONTEUDO_MODAL {
-  font-family: 'Montserrat', sans-serif;
+  font: 'Montserrat';
   transform: translateX(-50%);
   position: absolute;
   top: 20%;
   left: 50%;
+}
+#TITULO_DISPONIVEL {
+    font-size: 62px;
+    font-weight: bold;
+    position: absolute;
+    font-family: 'Montserrat';
+    color: rgba(28, 76, 46, 1);
+    top: -300%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+#PESSOAS_MODAL{
+    font-family: 'Montserrat';
+    position: absolute;
+}
+
+#VAGAS_MODAL{
+    font-family: 'Montserrat';
+    font-weight: medium;
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.9);
+    font-size: 22px;
+    width: 400px;
+    top: 120%;
+    position: absolute;
+    transform: translateX(5%);
+}
+
+#IMAGEM_DISPONIVEL{
+width: 150px;
+height: 150px;
+background-image: url(https://cdn.discordapp.com/attachments/1227799159159914569/1243044201038479493/check-mark_1.png?ex=66500aa0&is=664eb920&hm=04726b568c86f0ae799a014ad09879b9b25a8fe6704a9ed2727b1590557b6c6a&);
+background-size: cover;
+background-position: center;
+position: absolute;
+top: -80%;
+left: 35%;
 }
